# flow-inviscid

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md  installation.md
src/flow_inviscid/: __init__.py
src/flow_inviscid/cli/: __init__.py  app.py  callbacks.py  cmd_init.py  cmd_newtonian.py  cmd_shock_expansion.py  cmd_solve.py  cmd_tangent_cone.py
src/flow_inviscid/config/: __init__.py  reader.py  schema.py  template.py  writer.py
src/flow_inviscid/geometry/: __init__.py  surface.py
src/flow_inviscid/io/: __init__.py  read_ascii.py  read_body.py  write_tecplot.py
src/flow_inviscid/methods/: __init__.py  newtonian.py
tests/: test_cli.py  test_reader_writer.py  test_schema.py  test_template.py
